[gd_scene load_steps=4 format=3 uid="uid://n6os3ksusok"]

[ext_resource type="Script" path="res://Scripts/meteor.gd" id="1_2560c"]
[ext_resource type="Texture2D" uid="uid://cj8rwiq06nm4y" path="res://Assets/PNG/Sprites/Meteors/spaceMeteors_004.png" id="2_5u33u"]
[ext_resource type="PackedScene" uid="uid://dbt4nlhm2ou83" path="res://Scenes/MeteorAudioScene/MeteorAudio.tscn" id="3_ftpep"]

[node name="Meteor" type="Area2D" groups=["damagable"]]
position = Vector2(208, 252)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_2560c")
metadata/_edit_group_ = true

[node name="SpaceMeteors004" type="Sprite2D" parent="."]
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_5u33u")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-49, -9, -28, -38, 1, -49, 28, -39, 46, -15, 49, 19, 26, 45, 0, 49, -30, 41, -48, 18)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(0.499998, 0.5)
scale = Vector2(5.45, 5.15)

[node name="MeteorAudio" parent="." instance=ExtResource("3_ftpep")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
